--- a/webcafe.html
+++ b/webcafe.html
@@ -13,13 +13,13 @@
         <h1 class="logo"><a href="#"><img src="images/rwd-logo.png" alt="Web Cafe"></a></h1>
         <ul class="member">
           <li><a href="#">로그인</a></li>
-          <li><a href="#">회원가입</a></li>
-          <li><a href="#">커뮤니티</a></li>
+          <li><span class="bar" aria_hidden="true">|</span><a href="#">회원가입</a></li>
+          <li><span class="bar" aria_hidden="true">|</span><a href="#">커뮤니티</a></li>
         </ul>
         <form action="https://formspree.io/bockdori@naver.com" method="POST" class="search-form">
           <fieldset>
             <legend>검색</legend>
-            <label for="search">검색어</label><input required type="search" id="search" name="keyword" placeholder="검색어를 입력하세요">
+            <label for="search" class="a11y-hidden">검색어</label><input required type="search" id="search" name="keyword" placeholder="검색어를 입력하세요">
             <button class="btn-search" type="submit">검색</button>
           </fieldset>
         </form>
